# digital-distribution

./: README.md  pyproject.toml
developers/: admin.py  models.py  serializers.py  urls.py  views.py
dls/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
games/: admin.py  models.py  serializers.py  urls.py  views.py
language/: admin.py  models.py  serializers.py  urls.py  views.py
news/: admin.py  models.py  serializers.py  urls.py  views.py
region/: admin.py  models.py  serializers.py  urls.py  views.py
region/migrations/: 0001_initial.py
settings/: settings.py  urls.py
tags/: admin.py  models.py  serializers.py  urls.py  views.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
